feat: fully update to spring boot 4, spring framework 7 via openrewrite recipie